--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,6 +1,9 @@
 -= Lightning Reminender Left Buttons Thunderbird Addon Release Notes =-
 
 ==========
+Version 1.1 - ??/??/2015
+-
+==========
 Version 1.0 - 30/01/2015
 - First release.
 ==========
