--- a/chrome/locale/en-US/overlay.properties
+++ b/chrome/locale/en-US/overlay.properties
@@ -1,1 +1,1 @@
-extensions.ltngremleftbtn@micz.it.description=Tired to mistakenly press that "Dismiss All" button? Move the Lightining Reminder "Snooze all for" and "Dismiss All" buttons to the left!
+extensions.ltngremleftbtn@micz.it.description=Tired to mistakenly press that "Dismiss All" button? Move the Lightning Reminder "Snooze all for" and "Dismiss All" buttons to the left!
