--- a/chrome/locale/it/settings.dtd
+++ b/chrome/locale/it/settings.dtd
@@ -4,4 +4,4 @@
 <!ENTITY LightningReminderLeftButtons.TabInfo.label "Informazioni">
 <!ENTITY LightningReminderLeftButtons.InfoMainDesc "Questo componente aggiuntivo è sviluppato nel mio tempo libero. Se lo trovi utile, sentiti libero di supportare il suo sviluppo con una piccola donazione, cliccando sul link che trovi qui sotto. Grazie!!">
 <!ENTITY LightningReminderLeftButtons.DonateLink "Fai una donazione!">
-<!ENTITY LightningReminderLeftButtons.SwapButtons.label "Mantieni i pulsanti a destra, ma invertili, mettendo &quot;Elimina tutti&quot; per primo.">
+<!ENTITY LightningReminderLeftButtons.SwapButtons.label "Mantieni i pulsanti a destra, ma invertili, mettendo &quot;Elimina tutti&quot; prima di &quot;Silenzia tutti per&quot;.">
