--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,8 +1,9 @@
 -= Lightning Reminender Left Buttons Thunderbird Addon Release Notes =-
 
 ==========
-Version 1.1 - ??/??/2015
--
+Version 2.0 - 01/02/2015
+- Added chinese translation (zh-CN), thanks yfdyh000 (from BabelZilla.org).
+- Added an option to keep the button on the right, but swap them.
 ==========
 Version 1.0 - 30/01/2015
 - First release.
